--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,11 @@
       <artifactId>guava</artifactId>
       <version>19.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>4.3.2.RELEASE</version>
+    </dependency>
   </dependencies>
 </project>
